--- a/FastScripts/src/.htaccess
+++ b/FastScripts/src/.htaccess
@@ -1,6 +1,8 @@
 RewriteEngine On
-#RewriteRule index.cgi /fastscripts/src/ [R=301,L]
-#RewriteRule ^admin/$ index.cgi/admin/ [L]
-RewriteRule ^([^/]+)/$ index.cgi/$1/ [QSA,L]
-RewriteRule ^([^/.]+)$ /fastscripts/src/$1/ [R=301,L]
 RewriteRule ^generator/([^/]+)$ index.cgi/generator/$1 [QSA,L]
+
+RewriteRule ^([^/.]+)$ /fastscripts/src/$1/ [R=301,L]
+
+RewriteCond %{REQUEST_FILENAME} !-f
+RewriteCond %{REQUEST_FILENAME} !-d
+RewriteRule ^(.+)$ index.cgi/$1/ [QSA,L]
